--- a/config.yml
+++ b/config.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: "multitor"
-        image: "multitor"
+        image: "gcr.io/august-tangent-228718/multitor"
 ---
 apiVersion: "autoscaling/v2beta1"
 kind: "HorizontalPodAutoscaler"
@@ -33,7 +33,7 @@ spec:
     name: "multitor-1"
     apiVersion: "apps/v1"
   minReplicas: 1
-  maxReplicas: 5
+  maxReplicas: 3
   metrics:
   - type: "Resource"
     resource:
